--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
     "type-check": "tsc --noEmit",
     "test": "jest",
     "test:watch": "jest --watch",
+    "check-duplicates": "./scripts/clean-duplicates.sh",
     "prepare": "husky install",
-    "pre-commit": "lint-staged"
+    "pre-commit": "npm run check-duplicates && lint-staged"
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.2",
