modified the .prettierrc

--- a/.prettierrc
+++ b/.prettierrc
@@ -1,11 +1,14 @@
 {
   "semi": true,
-  "trailingComma": "es5",
   "singleQuote": true,
-  "printWidth": 80,
+  "trailingComma": "all",
+  "printWidth": 100,
   "tabWidth": 2,
   "useTabs": false,
   "bracketSpacing": true,
-  "arrowParens": "avoid",
-  "endOfLine": "lf"
+  "arrowParens": "always",
+  "endOfLine": "lf",
+  "proseWrap": "preserve",
+  "jsxSingleQuote": false,
+  "quoteProps": "as-needed"
 }
